tests/fixtures/syntax/valid/stderr_contains_expectation.repor
case "stderr contains" {
  $ echo error >&2
  assert {
    stderr contains "error"
  }
}
