tests/fixtures/syntax/invalid/unknown_expectation_operator.repor
case "unknown operator" {
  $ echo hello
  assert {
    stdout includes "hello"
  }
}
